# meitong

./: .gitignore  README.md
config/: configuration.json  params_configuration.json  standardize_app_config.json
config/4/: configuration.json  params_configuration.json  standardize_app_config.json
standardize_app_xj_server/: CMakeLists.txt  configuration.json  itek_camera.cpp  itek_camera.h  itek_camera_config.cpp  itek_camera_config.h  main.cpp  utils.cpp  utils.h  xj_app_algorithm.h  xj_app_data.h  xj_app_database.cpp  xj_app_database.h  xj_app_detector.cpp  xj_app_detector.h  xj_app_io_manager.cpp  xj_app_io_manager.h  xj_app_json_config.cpp  xj_app_json_config.h  xj_app_running_result.cpp  xj_app_running_result.h  xj_app_server.cpp  xj_app_server.h  xj_app_web_server.cpp  xj_app_web_server.h  xj_app_workflow.cpp  xj_app_workflow.h
standardize_app_xj_server/test/: CMakeLists.txt  test.cpp
standardize_app_xj_server/web/: web_server.cpp  web_server.hpp
xj_algorithm_meitong/: CMakeLists.txt  configuration.json  data.h  standardize_app_config.json  utils.cpp  utils.h  xj_algorithm.cpp  xj_algorithm.h  xj_app_algorithm.cpp
xj_algorithm_meitong/tensorrt/: xj_app_yolo_classifier.cpp  xj_app_yolo_classifier.h
